Progress to date

--- a/index.html
+++ b/index.html
@@ -1,19 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: http://ogp.me/ns#">
 <head>
-    <meta charset="UTF-8">
+
+	<meta charset="UTF-8">
 	<meta property="og:title" content="Doctor Who Episode Title Randomizer">
 	<meta property="og:type" content="website">
 	<meta property="og:description" content="Created under the influence of jelly babies and operating under a very complex scientific principle called pot luck.">
-	<meta property="og:url" content="http://doctorwhoepisodetitlerandomizer.com/">
-	<meta property="og:image" content="http://doctorwhoepisodetitlerandomizer.com/assets/images/dwetr-share-avatar.jpg">
+	<meta property="og:url" content="http://doctorwhorandomizer.com/">
+	<meta property="og:image" content="http://doctorwhorandomizer.com/assets/images/dwetr-share-avatar.jpg">
+	<link rel="canonical" href="http://doctorwhorandomizer.com/">
 
-	<link rel="stylesheet" href="assets/css/main.css">
-    <title></title>
+	<title>Doctor Who Episode Title Randomizer</title>
+
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Created under the influence of jelly babies and operating under a very complex scientific principle called pot luck.">
+
+	<link rel="stylesheet" media="screen" href="assets/css/main.css">
+	<link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
+	<link rel="apple-touch-icon" href="assets/images/apple-touch-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="assets/images/apple-touch-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="assets/images/apple-touch-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="assets/images/apple-touch-icon-144x144.png">
+
 </head>
 <body>
-	<h1>Hey</h1>
+
+	<div id="vortex" class="vortex">
+		<p id="title" class="title">The Test of Doom</p>
+		<button id="title-create" class="title-create"><img src="assets/images/reload.svg" alt="Create a new title"><span class="screen-reader-text">Create a New Title</span></button>
+	</div>
 
 	<script src="assets/scripts/site/main.js"></script>
+
 </body>
 </html>
