--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 	<meta property="og:description" content="Created under the influence of jelly babies and operating under a very complex scientific principle called pot luck.">
 	<meta property="og:url" content="http://doctorwhorandomizer.com/">
 	<meta property="og:image" content="http://doctorwhorandomizer.com/assets/images/dwetr-share-avatar.jpg">
-	<link rel="canonical" href="http://doctorwhorandomizer.com/">
 
 	<title>Doctor Who Episode Title Randomizer</title>
 
@@ -22,15 +21,82 @@
 	<link rel="apple-touch-icon" sizes="114x114" href="assets/images/apple-touch-icon-114x114.png">
 	<link rel="apple-touch-icon" sizes="144x144" href="assets/images/apple-touch-icon-144x144.png">
 
+	<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js" async></script>
+
 </head>
+
 <body>
 
+	<header class="site-header screen-reader-text">
+		<h1>Doctor Who <br>Episode Title Randomizer</h1>
+		<p>Created under the influence of jelly babies and operating under a very complex scientific principle called pot luck.</p>
+	</header>
+
 	<div id="vortex" class="vortex">
-		<p id="title" class="title">The Test of Doom</p>
-		<button id="title-create" class="title-create"><img src="assets/images/reload.svg" alt="Create a new title"><span class="screen-reader-text">Create a New Title</span></button>
+		<p id="title" class="title"></p>
+		<button id="title-create" class="title-create"><img src="assets/images/reload.svg" alt="Create a new title"><span class="screen-reader-text">Create a new title</span></button>
+		<button id="share" class="share"><img src="assets/images/share.svg" alt="Share your title"><span class="screen-reader-text">Share your title</span></button>
 	</div>
 
 	<script src="assets/scripts/site/main.js"></script>
 
 </body>
+<!--
+                       ___
+                       | |
+                       | |
+               -------------------
+               -------------------
+                |  ___  |  ___  |
+                | | | | | | | | |
+                | |-+-| | |-+-| |
+                | |_|_| | |_|_| |                  ___
+                |  ___  |  ___  |           D>=G==='   '.
+                | |   | | |   | |                 |======|
+                | |   | | |   | |                 |======|
+                | |___| | |___| |             )--/]IIIIII]
+                |  ___  |  ___  |                |_______|
+                | |   | | |   | |                C O O O D
+                | |   | | |   | |               C O  O  O D
+                | |___| | |___| |              C  O  O  O  D
+                |       |       |              C__O__O__O__D
+               ===================            [_____________]
+
+          ######      #####      #####  ########  #####    #######
+          ##   ##    ##   ##    ##   ##    ##    ##   ##   ##    ##
+          ##    ##  ##     ##  ##          ##   ##     ##  ##    ##
+          ##    ##  ##     ##  ##          ##   ##     ##  ## ###
+          ##   ##    ##   ##    ##   ##    ##    ##   ##   ##    ##
+############ ########### ########################### ########    ############
+                                                                           ##
+ ############     #####     ###########     #####################         ##
+ ##     #####     #####     ###########     #######################       ##
+  ##     #####   #######   #####  #####     #####    ###############     ##
+  ##     #####   #######   #####  #####     #####   #####       #####    ##
+   ##     ##### ######### #####   #####     #####  #####         #####  ##
+   ##     ##### ######### #####   ###############  #####         #####  ##
+    ##     ######### #########    ###############  #####         ##### ##
+    ##     ######### #########    #####     #####  #####         ##### ##
+     ##     #######   #######     #####     #####   #####       ##### ##
+     ##     #######   #######     #####     #####    ###############  ##
+      ##     #####     #####      #####     #####     #############  ##
+      ##     #####     #####      #####     #####       #########    ##
+       ##                                                           ##
+       ###############################################################
+
+            _____      _               _        _____ _ _   _
+           |  ___|    (_)             | |      |_   _(_) | | |
+           | |__ _ __  _ ___  ___   __| | ___    | |  _| |_| | ___
+           |  __| '_ \| / __|/ _ \ / _` |/ _ \   | | | | __| |/ _ \
+           | |__| |_) | \__ \ (_) | (_| |  __/   | | | | |_| |  __/
+           \____/ .__/|_|___/\___/ \__,_|\___|   \_/ |_|\__|_|\___|
+                | |
+           _____|_|              _                 _
+           | ___ \              | |               (_)
+           | |_/ /__ _ _ __   __| | ___  _ __ ___  _ _______ _ __
+           |    // _` | '_ \ / _` |/ _ \| '_ ` _ \| |_  / _ \ '__|
+           | |\ \ (_| | | | | (_| | (_) | | | | | | |/ /  __/ |
+           \_| \_\__,_|_| |_|\__,_|\___/|_| |_| |_|_/___\___|_|
+
+-->
 </html>
