Commits work to date

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 					<div id="screenshot-tv" class="screenshot-tv"></div>
 				</div>
 				<div class="modal-header">
-					<h1>Doctor Who <br>Episode Title Randomizer</h1>
+					<h1><span class="line1">Doctor Who</span> <span class="line2">Episode Title Randomizer</span></h1>
 					<p>Share your unique title with the Universe!</p>
 				</div>
 				<div id="download" class="download"></div>
